[gd_scene load_steps=3 format=3 uid="uid://doh7dpdkjf6we"]

[ext_resource type="Script" path="res://Objects/Overworld/Scripts/RoomTransition.gd" id="1_44byv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ee0tv"]
size = Vector2(16, 16)

[node name="RoomTransition" type="Area2D"]
collision_layer = 0
script = ExtResource("1_44byv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ee0tv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
